--- a/src/main/webapp/asserts/css/employeeHeader.css
+++ b/src/main/webapp/asserts/css/employeeHeader.css
@@ -8,16 +8,12 @@
 
 body {
 	font-family: "Roboto", sans-serif;
-	background-color: #f9f7f7;
-	overflow-x: hidden;
-	font-family: "Roboto", sans-serif;
 }
 
-#webTitle {
-	margin-left: 30px;
-}
-/* Header Styles */
 header {
+	position: fixed;
+	width: 100%;
+	z-index: 100;
 	display: flex;
 	justify-content: space-between;
 	background-color: #007BFF;
@@ -30,7 +26,45 @@ header h1 {
 	margin-left: 20px;
 	font-family: 'Roboto', sans-serif;
 }
-/* Signout button in the header */
+
+aside {
+	height: 100%; /* Set the height to 100% of the parent container */
+	overflow-y: auto;
+	/* Add vertical scroll when content exceeds the height */
+	background-color: #333;
+	color: #fff;
+	width: 15%; /* Adjust the width as needed */
+	position: fixed;
+	/* Fixed position to stay in view while scrolling */
+	top: 0; /* Position it at the top */
+	left: 0; /* Position it on the left */
+}
+
+aside button {
+	background-color: transparent;
+	border: none;
+	color: #fff;
+	padding: 10px 0;
+	width: 100%;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+	font-size: 16px;
+	margin-top: 10%;
+}
+
+aside ul {
+	margin-top: 100px;
+}
+
+aside button:hover {
+	background-color: #555;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+}
+
 .signout {
 	background-color: transparent;
 	border: none;
@@ -44,53 +78,8 @@ header h1 {
 header .signout:hover {
 	text-decoration: none;
 }
-/* Sidebar Styles */
-aside {
-	height: 100%; /* Set the height to 100% of the parent container */
-	overflow-y: auto;
-	/* Add vertical scroll when content exceeds the height */
-	background-color: #333;
-	color: #fff;
-	width: 15%; /* Adjust the width as needed */
-	position: fixed; /* Fixed position to stay in view while scrolling */
-	top: 9%; /* Position it at the top */
-	left: 0; /* Position it on the left */
-}
-
-aside ul {
-	list-style-type: none;
-	padding: 0;
-	margin: 0; /* Remove default margin */
-}
-
-aside li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
-aside button {
-	background-color: transparent;
-	border: none;
-	color: #fff;
-	padding: 10px 0;
-	width: 100%;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-	font-size: 16px;
-}
-
-aside button:hover {
-	background-color: #555;
-}
-
-a {
-	color: white;
-	text-decoration: none;
-}
 
 main {
-	margin-left: 16%;
-	margin-right: 0;
-	padding-top: 1%;
+	margin-left: 220px;
+	padding: 20px;
 }
