--- a/src/main/webapp/asserts/css/employeeList.css
+++ b/src/main/webapp/asserts/css/employeeList.css
@@ -1,7 +1,13 @@
 @charset "ISO-8859-1";
-/* Main Content Styles */
-main {
-	padding: 20px;
+
+.edit-button {
+	background-color: #007BFF;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	cursor: pointer;
+	font-size: 16px;
 }
 
 .addEmployeeDiv {
@@ -31,7 +37,7 @@ main {
 }
 
 #addPopupContainer {
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	position: fixed;
@@ -56,8 +62,7 @@ form label {
 	font-weight: bold;
 }
 
-form input[type="text"], form input[type="email"], form input[type="password"]
-	{
+form input, form select {
 	width: 100%;
 	padding: 10px;
 	margin-bottom: 10px;
@@ -75,7 +80,31 @@ form input[type="text"], form input[type="email"], form input[type="password"]
 	font-size: 16px;
 }
 
+.edit-popup {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 2;
+}
+
+.edit-popup-content {
+	background-color: #fff;
+	width: 70%;
+	max-width: 600px;
+	margin: 10% auto;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 .cancel-button {
+	margin-top: 10px;
+	display: block; /* Ensure the button takes up the full width */
+	width: 100%; /* Make the button full-width */
 	background-color: #ccc;
 	color: #fff;
 	border: none;
@@ -105,16 +134,6 @@ form input[type="text"], form input[type="email"], form input[type="password"]
 .styled-table th {
 	background-color: #007BFF;
 	color: #fff;
-}
-
-.edit-button {
-	background-color: #007BFF;
-	color: #fff;
-	border: none;
-	border-radius: 5px;
-	padding: 10px 20px;
-	cursor: pointer;
-	font-size: 16px;
 }
 
 .edit-button:hover {
