--- a/src/main/webapp/assets/css/employeeHeader.css
+++ b/src/main/webapp/assets/css/employeeHeader.css
@@ -74,10 +74,15 @@ a {
 	cursor: pointer;
 	margin-right: 30px;
 	font-size: larger;
+	width: 100%;
 }
 
 header .signout:hover {
 	text-decoration: none;
+}
+
+#logoutIcon {
+	width: 45%;
 }
 
 main {
